# capsule

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: new-implementation.md
.github/workflows/: ci.yaml  python-ci.yaml  python-release.yaml  release.yaml  typescript-ci.yaml  typescript-release.yaml
conformance/: README.md  fixtures.json  generate_fixtures.py  invalid-fixtures.json  uri-fixtures.json
docs/: README.md  architecture.md  compliance.md  implementors-guide.md  security.md  why-capsules.md
examples/: README.md
nist-submission/: Attachment2_CPS-Specification-v1.0.txt  Attachment3_CPS-Golden-Test-Vectors.txt  README.md  checksums.txt  comment.txt
reference/: README.md
reference/python/: README.md  pyproject.toml
reference/python/docs/: api.md  audit-report.md  getting-started.md  high-level-api.md
reference/python/src/qp_capsule/: __init__.py  capsule.py  chain.py  cli.py  exceptions.py  keyring.py  paths.py  seal.py  storage.py  storage_pg.py  validation.py
reference/python/src/qp_capsule/integrations/: fastapi.py
reference/python/tests/: conftest.py  test_capsule.py  test_chain.py  test_chain_concurrency.py  test_cli.py  test_column_width.py  test_fastapi.py  test_invalid_fixtures.py  test_invariants.py  test_keyring.py  test_package_exports.py  test_protocol_structure.py  test_repo_hygiene.py  test_seal.py  test_validation.py
reference/typescript/: README.md  package-lock.json  package.json
reference/typescript/__tests__/: capsule.test.ts  conformance.test.ts  exports.test.ts  invalid-fixtures.test.ts  seal.test.ts  validation.test.ts
reference/typescript/coverage/: canonical.ts.html  capsule.ts.html  chain.ts.html  clover.xml  index.html  index.ts.html  seal.ts.html
reference/typescript/src/: capsule.ts  chain.ts  index.ts  seal.ts  validation.ts
spec/: README.md  uri-scheme.md
