[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qp-capsule"
version = "1.5.2"
description = "Capsule Protocol Specification (CPS) — tamper-evident audit records for AI operations. Create, seal, verify, and chain Capsules in Python."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    { name = "Quantum Pipes Technologies, LLC" }
]
keywords = [
    "ai",
    "audit-trail",
    "capsules",
    "cps",
    "cryptography",
    "ed25519",
    "sha3",
    "tamper-evident",
    "trustworthy-ai",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pynacl>=1.6.2",
]

[project.optional-dependencies]
storage = [
    "sqlalchemy>=2.0.48",
    "aiosqlite>=0.22.1",
]
postgres = [
    "sqlalchemy>=2.0.48",
    "asyncpg>=0.31.0",
]
pq = [
    "liboqs-python>=0.14.1",
]
fastapi = [
    "fastapi>=0.135.1",
]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
    "mypy>=1.19.1",
    "httpx>=0.28.1",
]

[project.scripts]
capsule = "qp_capsule.cli:_entry"

[project.urls]
Homepage = "https://github.com/quantumpipes/capsule"
Documentation = "https://github.com/quantumpipes/capsule/tree/main/reference/python/docs"
Repository = "https://github.com/quantumpipes/capsule"
Changelog = "https://github.com/quantumpipes/capsule/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/quantumpipes/capsule/issues"
"CPS Specification" = "https://github.com/quantumpipes/capsule/tree/main/spec"

[tool.hatch.build.targets.wheel]
packages = ["src/qp_capsule"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["error"]

[tool.coverage.run]
source = ["qp_capsule"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
